Bug fix - paragraph spacing in the plain text

--- a/app/assets/stylesheets/components/cipher.less
+++ b/app/assets/stylesheets/components/cipher.less
@@ -23,6 +23,10 @@
 
         p {
             margin: 0;
+
+            &.author, &.congrats {
+                margin: 1em 0 0;
+            }
         }
 
         .ui.ribbon.label {
